--- a/lab1/LLM_Klasyczne_metody_klasyfikacji_tekstu_Lab_LLM.ipynb
+++ b/lab1/LLM_Klasyczne_metody_klasyfikacji_tekstu_Lab_LLM.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "zdGVyE77UU7l"
       },
@@ -93,7 +93,7 @@
         "import numpy as np\n",
         "import heapq\n",
         "import matplotlib.pyplot as plt\n",
-        "from torch.utils.data import DataLoader\n",
+        "from torch.utils.data import DataLoader, TensorDataset\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from sklearn.decomposition import TruncatedSVD\n",
         "from datasets import load_dataset\n",
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "mqDLYFafW9yC"
       },
@@ -265,7 +265,7 @@
         "                self.layers.append(nn.Linear(*layer[\"linear\"]))\n",
         "            if \"batch_norm\" in layer:\n",
         "                self.layers.append(nn.BatchNorm1d(layer[\"batch_norm\"]))\n",
-        "            if \"activation\" in layer:\n",
+        "            if \"relu\" in layer:\n",
         "                self.layers.append(nn.ReLU())\n",
         "        \n",
         "    def forward(self, x):\n",
@@ -282,17 +282,6 @@
       "source": [
         "def calc_accuracy(y_pred, y):\n",
         "    return (y_pred == y).sum().item() / len(y)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "train_loader = DataLoader(dataset_train, batch_size=BATCH_SIZE, shuffle=True, num_workers=NUM_WORKERS, pin_memory=True)\n",
-        "val_loader = DataLoader(dataset_val, batch_size=BATCH_SIZE, shuffle=False, num_workers=NUM_WORKERS, pin_memory=True)\n",
-        "test_loader = DataLoader(dataset_test, batch_size=BATCH_SIZE, shuffle=False, num_workers=NUM_WORKERS, pin_memory=True)"
       ]
     },
     {
@@ -1055,29 +1044,54 @@
       ],
       "source": [
         "vectorizer = TfidfVectorizer(max_features=10000, min_df=2, max_df=0.95)\n",
-        "vectorizer.fit(dataset_train[\"text\"])"
+        "X_train_tf_idf = vectorizer.fit_transform(dataset_train[\"text\"])\n",
+        "X_val_tf_idf = vectorizer.transform(dataset_val[\"text\"])\n",
+        "X_test_td_idf = vectorizer.transform(dataset_test[\"text\"])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(32, 10000)"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "batch = next(iter(train_loader))\n",
-        "vec = vectorizer.transform(batch[\"text\"])\n",
-        "vec.shape"
+        "svd = TruncatedSVD(n_components=300)\n",
+        "X_train = svd.fit_transform(X_train_tf_idf)\n",
+        "X_val = svd.transform(X_val_tf_idf)\n",
+        "X_test = svd.transform(X_test_td_idf)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_train = np.array(dataset_train[\"label\"])\n",
+        "y_val = np.array(dataset_val[\"label\"])\n",
+        "y_test = np.array(dataset_val[\"label\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_dataset = TensorDataset(torch.tensor(X_train), torch.tensor(y_train))\n",
+        "val_dataset = TensorDataset(torch.tensor(X_val), torch.tensor(y_val))\n",
+        "test_dataset = TensorDataset(torch.tensor(X_test), torch.tensor(y_test))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=NUM_WORKERS, pin_memory=True)\n",
+        "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=NUM_WORKERS, pin_memory=True)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=NUM_WORKERS, pin_memory=True)"
       ]
     },
     {
@@ -1092,17 +1106,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def predict(model, loader, vectorizer, device):\n",
+        "def predict(model, loader, device):\n",
         "    logits_list = []\n",
         "    label_list = []\n",
         "    with torch.inference_mode():\n",
-        "        for batch in loader:\n",
-        "            X = _to_dense_tensor(vectorizer.transform(batch[\"text\"]), device)\n",
-        "            y = batch[\"label\"]\n",
+        "        for X, y in loader:\n",
+        "            X, y = X.to(device), y.to(device)\n",
         "            logits = model(X)\n",
         "            logits_list.extend(logits.detach().cpu().numpy())\n",
         "            label_list.extend(y)\n",
@@ -1112,7 +1125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1124,7 +1137,6 @@
         "    optim_type,\n",
         "    optim_params,\n",
         "    criterion,\n",
-        "    vectorizer,\n",
         "    device\n",
         "):\n",
         "    \n",
@@ -1133,21 +1145,20 @@
         "    for epoch in range(epochs):\n",
         "        model.train()\n",
         "        avg_loss = 0\n",
-        "        for batch in train_loader:\n",
-        "            X = _to_dense_tensor(vectorizer.transform(batch[\"text\"]), device)\n",
-        "            y = batch[\"label\"].to(device)\n",
+        "        for X, y in train_loader:\n",
+        "            X, y = X.to(device), y.to(device)\n",
         "            optimizer.zero_grad()\n",
         "            logits = model(X)\n",
         "            loss = criterion(logits, y)\n",
         "            loss.backward()\n",
         "            optimizer.step()\n",
         "            avg_loss += loss.item()\n",
-        "        losses.append(avg_loss // len(train_loader))\n",
+        "        losses.append(avg_loss / len(train_loader))\n",
         "        if epoch % 5 == 0:\n",
         "            model.eval()\n",
-        "            train_pred_y, train_y = predict(model, train_loader, vectorizer, device)\n",
+        "            train_pred_y, train_y = predict(model, train_loader, device)\n",
         "            train_acc = calc_accuracy(train_pred_y, train_y)\n",
-        "            val_pred_y, val_y = predict(model, eval_loader, vectorizer, device)\n",
+        "            val_pred_y, val_y = predict(model, eval_loader, device)\n",
         "            val_acc = calc_accuracy(val_pred_y, val_y)\n",
         "\n",
         "            print(\n",
@@ -1252,41 +1263,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "architectures = [\n",
         "    [\n",
-        "        {\"linear\": (10000, 512), \"batch_norm\": 512, \"activation\": True},\n",
-        "        {\"linear\": (512, 256), \"batch_norm\": 256, \"activation\": True},\n",
+        "        {\"linear\": (10000, 512), \"relu\": True},\n",
+        "        {\"linear\": (512, 256), \"relu\": True},\n",
         "        {\"linear\": (256, 5)},\n",
         "    ],\n",
         "    [\n",
-        "        {\"linear\": (10000, 256), \"batch_norm\": 256, \"activation\": True},\n",
-        "        {\"linear\": (256, 128), \"batch_norm\": 128, \"activation\": True},\n",
+        "        {\"linear\": (10000, 256), \"relu\": True},\n",
+        "        {\"linear\": (256, 128), \"relu\": True},\n",
         "        {\"linear\": (128, 5)},\n",
         "    ],\n",
         "    [\n",
-        "        {\"linear\": (10000, 1024), \"batch_norm\": 1024, \"activation\": True},\n",
-        "        {\"linear\": (1024, 512), \"batch_norm\": 512, \"activation\": True},\n",
-        "        {\"linear\": (512, 256), \"batch_norm\": 256, \"activation\": True},\n",
+        "        {\"linear\": (10000, 1024), \"relu\": True},\n",
+        "        {\"linear\": (1024, 512), \"relu\": True},\n",
+        "        {\"linear\": (512, 256), \"relu\": True},\n",
         "        {\"linear\": (256, 5)},\n",
         "    ],\n",
         "    [\n",
-        "        {\"linear\": (10000, 512), \"batch_norm\": 512, \"activation\": True},\n",
-        "        {\"dropout\": 0.3, \"linear\": (512, 256), \"batch_norm\": 256, \"activation\": True},\n",
+        "        {\"linear\": (10000, 512), \"relu\": True},\n",
+        "        {\"dropout\": 0.3, \"linear\": (512, 256), \"relu\": True},\n",
         "        {\"dropout\": 0.3, \"linear\": (256, 5)},\n",
         "    ],\n",
         "    [\n",
-        "        {\"linear\": (10000, 256), \"batch_norm\": 256, \"activation\": True},\n",
-        "        {\"dropout\": 0.3, \"linear\": (256, 128), \"batch_norm\": 128, \"activation\": True},\n",
+        "        {\"linear\": (10000, 256), \"relu\": True},\n",
+        "        {\"dropout\": 0.3, \"linear\": (256, 128), \"relu\": True},\n",
         "        {\"dropout\": 0.3, \"linear\": (128, 5)},\n",
         "    ],\n",
         "    [\n",
-        "        {\"linear\": (10000, 512), \"batch_norm\": 512, \"activation\": True},\n",
-        "        {\"dropout\": 0.3, \"linear\": (512, 256), \"batch_norm\": 256, \"activation\": True},\n",
-        "        {\"dropout\": 0.3, \"linear\": (256, 128), \"batch_norm\": 128, \"activation\": True},\n",
+        "        {\"linear\": (10000, 512), \"relu\": True},\n",
+        "        {\"dropout\": 0.3, \"linear\": (512, 256), \"batch_norm\": 256, \"relu\": True},\n",
+        "        {\"dropout\": 0.3, \"linear\": (256, 128), \"batch_norm\": 128, \"relu\": True},\n",
         "        {\"dropout\": 0.3, \"linear\": (128, 5)},\n",
         "    ],\n",
         "]"
